--- a/src/scss/componets/blackfriday22-content.scss
+++ b/src/scss/componets/blackfriday22-content.scss
@@ -22,6 +22,9 @@
     margin: 0;
     position: absolute;
     top: 0;
-    left: 66.8%;
+    left: 768px;
+    img{
+      max-width: none;
+    }
   }
 }
