--- a/src/scss/componets/blackfriday22-hero.scss
+++ b/src/scss/componets/blackfriday22-hero.scss
@@ -1,5 +1,16 @@
 .blackfriday22-hero{
   height: 500px;
+  position: relative;
+  &:after{
+    content: '';
+    position: absolute;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    height: 164px;
+    background: linear-gradient(180deg, #000000 0%, rgba(0, 0, 0, 0) 100%);
+    transform: matrix(1, 0, 0, -1, 0, 0);
+  }
   &__body{
     max-width: 1150px;
     margin: 0 auto;
@@ -16,6 +27,10 @@
     margin: 0;
     position: absolute;
     top: 0;
-    right: -130px;
+    left: 513px;
+    z-index: 1;
+    img{
+      max-width: none;
+    }
   }
 }
