--- a/src/scss/blackfriday22.scss
+++ b/src/scss/blackfriday22.scss
@@ -28,7 +28,6 @@
 	background-color: #000000;
 }
 
-
 .container {
 	max-width: 1150px;
 	margin-left: auto;
@@ -36,8 +35,6 @@
 	padding-right: 20px;
 	padding-left: 20px;
 }
-
-
 
 .d-none {
 	display: none !important;
@@ -102,6 +99,7 @@
 
 @import "componets/blackfriday22-hero";
 @import "componets/blackfriday22-content";
+@import "componets/blackfriday22-quotes";
 
 
 
