--- a/src/scss/blackfriday22.scss
+++ b/src/scss/blackfriday22.scss
@@ -100,6 +100,7 @@
 @import "componets/blackfriday22-hero";
 @import "componets/blackfriday22-content";
 @import "componets/blackfriday22-quotes";
+@import "componets/blackfriday22-all";
 
 
 
