--- a/src/scss/blackfriday22.scss
+++ b/src/scss/blackfriday22.scss
@@ -99,12 +99,12 @@
 	max-width: 734px;
 	background-color: #0D0D0D;
 	text-align: left;
-	padding: 87px 29px 65px 32px ;
+	padding: 82px 46px 28px;
 	border: 5px solid #F6F4F3;
 }
 .remodal-close{
-	top: 20px;
-	right: 20px;
+	top: 13px;
+	right: 13px;
 	left: auto;
 	width: 33px;
 	height: 33px;
@@ -123,14 +123,15 @@
 	font-size: 20px;
 	line-height: 24px;
 	color: #F6F4F3;
-	margin: 0 0 20px;
+	margin: 0 0 24px;
 	span{
-		
+		color: #FDB913;
 	}
-}
-.remodal small{
-	font-size: 11px;
-	line-height: 12px;
+	&.small{
+		font-size: 11px;
+		line-height: 12px;
+		margin-top: -27px;
+	}
 }
 
 @import "componets/blackfriday22-hero";
