--- a/src/scss/blackfriday22.scss
+++ b/src/scss/blackfriday22.scss
@@ -138,6 +138,8 @@
 @import "componets/blackfriday22-content";
 @import "componets/blackfriday22-quotes";
 @import "componets/blackfriday22-all";
+@import "componets/blackfriday22-category";
+@import "componets/blackfriday22-block";
 
 
 
