--- a/src/scss/componets/blackfriday22-block.scss
+++ b/src/scss/componets/blackfriday22-block.scss
@@ -27,6 +27,92 @@
     width: 100%;
     height: 100%;
     z-index: 1;
+    &--block1{
+      .label-1{
+        position: absolute;
+        top: 185px;
+        left: 86px;
+      }
+      .label-2{
+        position: absolute;
+        bottom: 125px;
+        left: 74px;
+      }
+      .label-3{
+        position: absolute;
+        top: 167px;
+        right: 189px;
+      }
+      .label-4{
+        position: absolute;
+        bottom: 92px;
+        right: 49px;
+      }
+      .label-5 {
+        position: absolute;
+        left: 39.5%;
+        top: 309px;
+      }
+    }
+    &--block2{
+      .label-1{
+        position: absolute;
+        top: 78px;
+        left: 137px;
+      }
+      .label-2{
+        position: absolute;
+        bottom: 231px;
+        left: 281px;
+      }
+      .label-3{
+        position: absolute;
+        top: 198px;
+        left: 419px;
+      }
+      .label-4{
+        position: absolute;
+        bottom: 116px;
+        left: 27px;
+      }
+      .label-5 {
+        position: absolute;
+        right: -53px;
+        top: 279px;
+      }
+      .label-6 {
+        position: absolute;
+        right: -53px;
+        bottom: 141px;
+      }
+    }
+    &--block3{
+      .label-1{
+        position: absolute;
+        left: 56px;
+        top: 311px;
+      }
+      .label-2{
+        position: absolute;
+        top: 194px;
+        left: 475px;
+      }
+      .label-3{
+        position: absolute;
+        bottom: 99px;
+        right: 295px;
+      }
+      .label-4{
+        position: absolute;
+        top: 311px;
+        left: 370px;
+      }
+      .label-5 {
+        position: absolute;
+        top: 178px;
+        right: 85px;
+      }
+    }
   }
   &__btn{
     display: block;
@@ -41,7 +127,7 @@
     border-radius: 12px;
     padding: 11px;
     cursor: pointer;
-    transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out,box-shadow .15s ease-in-out;
+    transition: all .3s ease;
     text-decoration: none;
     font-family: $font1;
     font-weight: 700;
@@ -52,6 +138,7 @@
     opacity: .5;
     &:hover{
       opacity: 1;
+      transition: all .3s ease;
     }
     &:before{
       content: '';
@@ -92,31 +179,17 @@
       left: 50%;
       transform: translate(-50%,0);
     }
-    &.label-1{
-      position: absolute;
-      top: 185px;
-      left: 86px;
+    &.left-center:before{
+      top: 50%;
+      left: -18px;
+      transform: translate(0,-50%);
     }
-    &.label-2{
-      position: absolute;
-      bottom: 125px;
-      left: 74px;
+    &.right-center:before{
+      top: 50%;
+      right: -18px;
+      transform: translate(0,-50%);
     }
-    &.label-3{
-      position: absolute;
-      top: 167px;
-      right: 189px;
-    }
-    &.label-4{
-      position: absolute;
-      bottom: 92px;
-      right: 49px;
-    }
-    &.label-5 {
-      position: absolute;
-      left: 39.5%;
-      top: 309px;
-    }
+
   }
   &__category{
     margin-top: -72px;
