--- a/src/scss/blackfriday22.scss
+++ b/src/scss/blackfriday22.scss
@@ -28,14 +28,6 @@
 	background-color: #000000;
 }
 
-.container {
-	max-width: 1150px;
-	margin-left: auto;
-	margin-right: auto;
-	padding-right: 20px;
-	padding-left: 20px;
-}
-
 .d-none {
 	display: none !important;
 }
@@ -68,7 +60,7 @@
 }
 
 .main{
-
+	padding-bottom: 0;
 }
 
 .blackfriday22-btn{
